@startuml class-pos

class Produit {
  - id: int
  - nom: string
  - categorie: string
  - prix: float
  - stock: int
  + mettreAJourStock(qte: int): void
}

class Magasin {
  - id: int
  - nom: string
  - region: string
  + ajouterProduit(produit: Produit): void
  + supprimerProduit(produitId: int): void
}

class Maisonmere {
  - id: int
  - nom: string
  - adresse: string
  + ajouterMagasin(magasin: Magasin): void
  + supprimerMagasin(magasinId: int): void
}

class Utilisateur {
  - id: int
  - nom: string
  - role : string
  - motDePasse: string
  + seConnecter(): boolean
  + seDeconnecter(): void
}

class Vente {
  - id: int
  - date: datetime
  - total: float
  + calculerTotal(): float
}

' === Relations ===

Maisonmere "1" o-- "*" Magasin : gère
Magasin "1" o-- "*" Produit : contient
Magasin "1" --> "*" Vente : enregistre
Produit "1" --> "*" Vente : est_vendu
Utilisateur "*" --> "1" Magasin : travaille
Utilisateur "*" --> "1" Maisonmere : travaille
Vente "*" --> "1" Utilisateur : effectuée_par

@enduml
